--- a/Frontend/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/src/app/components/dashboard/dashboard.component.html
@@ -102,7 +102,7 @@
             <i class="fas fa-receipt"></i>
             <p>Aucune transaction récente</p>
             <a routerLink="/dashboard/transactions/new" class="btn btn-primary btn-sm">
-              <i class="fas fa-plus"></i> Nouvelle transaction
+             Nouvelle transaction
             </a>
           </div>
         }
@@ -136,7 +136,7 @@
             <i class="fas fa-users"></i>
             <p>Aucun client enregistré</p>
             <a routerLink="/dashboard/clients/new" class="btn btn-primary btn-sm">
-              <i class="fas fa-plus"></i> Nouveau client
+             Nouveau client
             </a>
           </div>
         }
