--- a/Frontend/src/app/components/client-form/client-form.component.html
+++ b/Frontend/src/app/components/client-form/client-form.component.html
@@ -128,7 +128,7 @@
               id="tel" 
               formControlName="tel"
               [class.invalid]="isFieldInvalid('tel')"
-              placeholder="+33 6 12 34 56 78"
+              placeholder="911209..."
             >
             @if (isFieldInvalid('tel')) {
               <span class="error-message">{{ getFieldError('tel') }}</span>
