--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -69,24 +69,23 @@
           </div>
         </div>
       } @else {
-        
         <!-- Connexion Admin -->
         <div class="form-group">
-          <label for="codeAdmin">
+          <label for="password">
             <i class="fas fa-key"></i>
-            Code administrateur
+            Mot de passe administrateur
           </label>
           <div class="password-input-wrapper">
             <input 
-              [type]="showAdminPassword() ? 'text' : 'password'" 
-              id="codeAdmin" 
-              [ngModel]="codeAdmin()" 
-              (ngModelChange)="codeAdmin.set($event)"
-              name="codeAdmin"
-              placeholder="Entrez le code administrateur"
+              [type]="showPassword() ? 'text' : 'password'" 
+              id="password" 
+              [ngModel]="password()" 
+              (ngModelChange)="password.set($event)"
+              name="password"
+              placeholder="Entrez le mot de passe administrateur"
               required>
-            <button type="button" class="toggle-password" (click)="toggleAdminPassword()" aria-label="Afficher/masquer le mot de passe">
-              <i class="fas" [class.fa-eye]="!showAdminPassword()" [class.fa-eye-slash]="showAdminPassword()"></i>
+            <button type="button" class="toggle-password" (click)="togglePassword()" aria-label="Afficher/masquer le mot de passe">
+              <i class="fas" [class.fa-eye]="!showPassword()" [class.fa-eye-slash]="showPassword()"></i>
             </button>
           </div>
         </div>
